# code-doc-pipeline

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  setup.cfg
.github/workflows/: validate.yml
agents/: openai.yaml
code_doc_pipeline/: __init__.py  cli.py
examples/tiny-api/: Dockerfile  package.json
examples/tiny-api/docs/: README.md  architecture.md  interfaces.md  operations.md
examples/tiny-api/docs/diagrams/: container-or-flow.mmd  context.mmd  critical-sequence.mmd  data-flow.mmd
examples/tiny-api/src/: server.ts
examples/tiny-api/src/repositories/: orders.ts
examples/tiny-api/src/services/: orders.ts
references/: diagram-patterns.md
scripts/: __init__.py  code_docs.py  inventory_repo.py
tests/: test_code_docs.py
