[metadata]
name = code-doc-pipeline
version = 0.2.0
description = Generate maintainable repository documentation, Mermaid diagrams, and CI documentation drift checks.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Nikolaj Fløjgaard
url = https://github.com/nikolajflojgaard/code-doc-pipeline
project_urls =
    Repository = https://github.com/nikolajflojgaard/code-doc-pipeline
    Issues = https://github.com/nikolajflojgaard/code-doc-pipeline/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Documentation
    Topic :: Software Development :: Documentation

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
include =
    code_doc_pipeline*
    scripts*

[options.entry_points]
console_scripts =
    code-docs = code_doc_pipeline.cli:main
